--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cheerio": "^1.1.0",
     "jsdom": "^26.1.0",
+    "linkedom": "^0.18.11",
     "lucide-react": "^0.515.0",
-    "next": "15.3.3",
+    "next": "^15.3.3",
     "node-fetch": "^3.3.2",
     "openai": "^5.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5.8.3"
   }
 }
